# cpp-thd-2023-11-28

./: .clang-format  .gitignore  CMakeLists.txt  README.md
.devcontainer/: Dockerfile  devcontainer.json
_exercises/monte-carlo-pi/: CMakeLists.txt  pi (2).cpp
_exercises/synchronization/: bank_account.cpp
_exercises/thread-safe-queue/: CMakeLists.txt
_exercises/thread-safe-queue/tests/: thread_safe_queue_tests.cpp
event-synchronization/: CMakeLists.txt  event_synchronization.cpp
futures/: futures.cpp
sp-sc-queue/: CMakeLists.txt  main.cpp  sp_sc_queue.hpp
synchronization-locking/: locking.cpp
thread-pool/: main.cpp  thread_safe_queue.hpp
threads/: threads.cpp
threads-exceptions/: thread_exceptions.cpp
